Fase 3 - Implementación - Fase estable 2